<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/layout1"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">


	<LinearLayout android:id="@+id/btnLayout"
	    android:layout_margin="10dip"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:layout_alignParentBottom="true">
		<Spinner android:id="@+id/GroupTestSpinner"
		    android:visibility="gone"
			android:layout_width="0dip" android:layout_height="wrap_content"
			android:layout_weight="2" />

		<Button android:id="@+id/btn_testall" android:layout_width="0dip"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/testall" />
		<Button android:id="@+id/btn_cancel" android:layout_width="0dip"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/Cancel" />

		<Button android:id="@+id/btn_clear" android:layout_width="0dip"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/Clear" />
			
		<Button android:id="@+id/btn_uninstall" android:layout_width="0dip"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/Uninstall" />

	</LinearLayout>

	<LinearLayout android:layout_alignParentTop="true"
		android:layout_above="@id/btnLayout" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<com.DeviceTest.view.MyGridView
			android:id="@+id/myGridView" android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
	</LinearLayout>
</RelativeLayout>