<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" 
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@drawable/android_wallpaper">

	<RelativeLayout android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/relativeLayout1"
		>
		<TextView android:text="@string/GsensorTest" android:id="@+id/txtTitle"
			android:textSize="30dip" android:gravity="center"
			android:layout_centerHorizontal="true" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />

		<TextView android:id="@+id/Accelerometer"
			android:layout_below="@id/txtTitle" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:textSize="20dip"
			android:text="@string/Accelerometer" />

		<!-- for accelerator -->
		<ScrollView 
		    android:layout_below="@id/Accelerometer"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:visibility="gone">
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">

				<TextView android:id="@+id/gsensorTestX"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="40dip" android:text="@string/Gsensor_x"
					android:visibility="invisible" />
				<TextView android:id="@+id/gsensorTestY"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="40dip" android:text="@string/Gsensor_y"
					android:visibility="invisible" />
				<TextView android:id="@+id/gsensorTestZ"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="40dip" android:text="@string/Gsensor_z"
					android:visibility="invisible" />
			</LinearLayout>
		</ScrollView>
	</RelativeLayout>
	
	<!--  com.DeviceTest.view.GsensorBall 
	    android:id="@+id/gsensorball"
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"/>-->
	
<RelativeLayout 
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_gravity="bottom">
    <include layout="@xml/control_buttons" android:id="@+id/acc_buttons"/>
</RelativeLayout>
	
</FrameLayout>
