<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/VersionTitle"
        android:textSize="24sp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTitle"
        android:orientation="vertical"
        android:paddingBottom="60dip" >

        <LinearLayout
            android:id="@+id/versionlayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="130px"
                android:layout_height="wrap_content"
                android:text="@string/Firmwareversion"
                android:visibility="visible" />

            <TextView
                android:id="@+id/TextFirmwareversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/versionlayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/versionlayout1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="130px"
                android:layout_height="wrap_content"
                android:text="@string/Kernelversion"
                android:visibility="visible" />

            <TextView
                android:id="@+id/TextKernelversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/versionlayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/versionlayout2"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="130px"
                android:layout_height="wrap_content"
                android:text="@string/Basebandversion"
                android:visibility="visible" />

            <TextView
                android:id="@+id/TextBasebandversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/versionlayout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/versionlayout3"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="130px"
                android:layout_height="wrap_content"
                android:text="@string/Buildversion"
                android:visibility="visible" />

            <TextView
                android:id="@+id/TextBuildversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@xml/control_buttons"/>

</RelativeLayout>