<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
  <RelativeLayout android:layout_height="match_parent" android:layout_width="wrap_content" android:id="@+id/relativeLayout1">
 <TextView 
   android:text="@string/LightsensorTest" 
   android:id="@+id/txtTitle"
   android:textSize= "30dip"
   android:gravity="center"
   android:layout_centerHorizontal="true"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"/>   
 
    
       
<!-- for Light   --> 
<TextView
	android:id="@+id/Light"
	android:layout_below="@id/txtTitle"
	android:textSize= "25dip"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/Light"
    />
<TextView 
	android:id="@+id/name_lig" 
	android:layout_below="@id/Light"
	android:textSize= "20dip"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
	
    />
<TextView 
	android:id="@+id/vendor_lig" 
	android:textSize= "20dip"
	android:layout_below="@id/name_lig"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
   
    />
<TextView 
	android:id="@+id/version_lig" 
	android:textSize= "20dip"
	android:layout_below="@id/vendor_lig"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
   
    />       
<TextView 
	android:id="@+id/maxRange_lig" 
	android:textSize= "20dip"
	android:layout_below="@id/version_lig"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    
    /> 
<TextView 
	android:id="@+id/resolution_lig" 
	android:textSize= "20dip"
	android:layout_below="@id/maxRange_lig"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    
    />  
<TextView 
	android:id="@+id/power_lig" 
	android:textSize= "20dip"
	android:layout_below="@id/resolution_lig"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    
    />
   
<TextView
	android:id="@+id/light"  
	android:textSize= "20dip"
	android:layout_below="@id/power_lig"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/lightvalue"
    />      
      
    <include layout="@xml/control_buttons" android:id="@+id/level_buttons"/>
    
    </RelativeLayout>
  
  
  
</LinearLayout>
